--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ social-network-links:
   medium: rajanmaharjan
   twitter: rajanmaharjn
   stackoverflow: "5738760/rajan-maharjan"
-  # youtube: "@rajanmaharjan3242"
+  youtube: "@rajanmaharjan3242"
   # ORCID: "0000-0003-1197-0611"
   hackerrank: maharjanrajan
   devto: rajanjs
