chore: enabled gtm

--- a/_config.yml
+++ b/_config.yml
@@ -171,7 +171,7 @@ gtag: "G-L72V2H2TC1"
 #cloudflare_analytics: ""
 
 # Google Tag Manager ID
-#gtm: ""
+gtm: "GTM-W5PT3ZB4"
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
