chore: updated resume

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navbar-links:
   Thought Bytes: "posts"
   Get My CV Here:
     - Plan Text CV: "/assets/resources/cv/rajan-resume-plain.pdf"
+    - Digital CV: "/assets/resources/cv/rajan-resume-digital.pdf"
     - Modern CV: "/assets/resources/cv/rajan-resume-modern.pdf"
     - Modern CV with PP: "/assets/resources/cv/rajan-resume-modern-pp.pdf"
     - Modern Professional: "/assets/resources/cv/rajan-resume-professional.pdf"
