feat: added sunpower contribution highlights

--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ edit_page_button: false
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "JavaScript Engineer,React,React Developer,React Native"
+keywords: "JavaScript Engineer,React,React Developer,React Native, Node.js, IoT, Angular, AngularJs, JavaScript Develper, Senior Mobile Developer, Senior React Native Developer"
 
 ######################################
 # --- Colours / background image --- #
