--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ navbar-links:
   My Works: "portfolio"
   Thought Bytes: "posts"
   Get My CV Here:
-    - Plan Text CV: "/assets/resources/cv/rajan-resume-plain.pdf"
-    - Digital CV: "/assets/resources/cv/rajan-resume-digital.pdf"
-    - Modern CV: "/assets/resources/cv/rajan-resume-modern.pdf"
-    - Modern CV with PP: "/assets/resources/cv/rajan-resume-modern-pp.pdf"
-    - Modern Professional: "/assets/resources/cv/rajan-resume-professional.pdf"
+    - Plan Text CV: "/cv/plain-text"
+    - Digital CV: "/cv/digital-cv"
+    - Modern CV: "/cv/modern-cv"
+    - Modern CV with PP: "/cv/modern-cv-pp"
+    - Modern Professional: "/cv/modern-professional"
 
 ################
 # --- Logo --- #
