Fix Jekyll config to include .well-known directory for Android App Links

--- a/_config.yml
+++ b/_config.yml
@@ -291,6 +291,10 @@ exclude:
   - README.md
   - docs/
 
+# Include hidden files/folders for Universal Links
+include:
+  - .well-known
+
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
