style: updated styles for responsive

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ############################
-# --- Required options --- #
+# --- Required options --- ##
 ############################
 
 # Name of website
